debut mise en place de la page pour les reservations

--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -20,7 +20,7 @@
                             <div class="navbar-nav mr-auto py-0">
                                 <a href={{ path('app_acceuil') }} class="nav-item nav-link active">Acceuil</a>
                                 <a href="" class="nav-item nav-link">A Propos</a>
-                                <a href="" class="nav-item nav-link">Services</a>
+                                <a href="{{ path('app_reservations_mes_reservations') }}" class="nav-item nav-link">Mes reservations</a>
                                 <a href={{path('app_chambre_index')}} class="nav-item nav-link">Chambres</a>
                                 <a href={{path('app_contact')}} class="nav-item nav-link">Contact</a>
                                 <a href={{ path('admin') }} class="nav-item nav-link">Admin</a>
