--- a/templates/partials/_carousel.html.twig
+++ b/templates/partials/_carousel.html.twig
@@ -10,7 +10,7 @@
                             <div class="p-3" style="max-width: 700px;">
                                 <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">vie de luxe</h6>
                                 <h1 class="display-3 text-white mb-4 animated slideInDown">Découvrez un hôtel de luxe de marque</h1>
-                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Nos Chambres</a>
+                                <a href={{path('app_chambre_index')}} class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Nos Chambres</a>
                                 <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Réserver une chambre</a>
                             </div>
                         </div>
@@ -21,7 +21,7 @@
                             <div class="p-3" style="max-width: 700px;">
                                 <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">vie de luxe</h6>
                                 <h1 class="display-3 text-white mb-4 animated slideInDown">Découvrez un hôtel de luxe de marque</h1>
-                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Nos Chambres</a>
+                                <a href="{{ path('app_chambre_index') }}" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Nos Chambres</a>
                                 <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Réserver une chambre</a>
                             </div>
                         </div>
