--- a/templates/partials/_apropos.html.twig
+++ b/templates/partials/_apropos.html.twig
@@ -3,15 +3,15 @@
             <div class="container">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6">
-                        <h6 class="section-title text-start text-primary text-uppercase">A Propos</h6>
+                        <h6 class="section-title text-start text-primary text-uppercase" id="a-propos">A Propos</h6>
                         <h1 class="mb-4">Bienvenue à <span class="text-primary text-uppercase">NAYIRHOTEL</span></h1>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                        <p class="mb-4">Votre solution moderne pour la gestion hôtelière. Que vous soyez un gestionnaire d'hôtel ou un client à la recherche d'une expérience de réservation fluide, NayirHotel a été conçu pour répondre à vos besoins.</p>
                         <div class="row g-3 pb-4">
                             <div class="col-sm-4 " >
                                 <div class="border rounded p-1">
                                     <div class="border rounded text-center p-4">
                                         <i class="fa fa-hotel fa-2x text-primary mb-2"></i>
-                                        <h2 class="mb-1" >1234</h2>
+                                        <h2 class="mb-1" >12</h2>
                                         <p class="mb-0">Chambres</p>
                                     </div>
                                 </div>
@@ -20,7 +20,7 @@
                                 <div class="border rounded p-1">
                                     <div class="border rounded text-center p-4">
                                         <i class="fa fa-users-cog fa-2x text-primary mb-2"></i>
-                                        <h2 class="mb-1" >1234</h2>
+                                        <h2 class="mb-1" >50</h2>
                                         <p class="mb-0">Staffs</p>
                                     </div>
                                 </div>
@@ -29,7 +29,7 @@
                                 <div class="border rounded p-1">
                                     <div class="border rounded text-center p-4">
                                         <i class="fa fa-users fa-2x text-primary mb-2"></i>
-                                        <h2 class="mb-1" >1234</h2>
+                                        <h2 class="mb-1" >600</h2>
                                         <p class="mb-0">Clients</p>
                                     </div>
                                 </div>
