--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -11,7 +11,6 @@
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
@@ -19,39 +18,25 @@
                         
                     <div class="col-md-4">
                         <h6 class="section-title text-start text-primary text-uppercase mb-4">Company</h6>
-                        <a class="btn btn-link" href="">About Us</a>
-                        <a class="btn btn-link" href="">Contact Us</a>
-                        <a class="btn btn-link" href="">Privacy Policy</a>
-                        <a class="btn btn-link" href="">Terms & Condition</a>
-                        <a class="btn btn-link" href="">Support</a>
+                        <a class="btn btn-link"  href="#a-propos">A Propos</a>
+                        <a class="btn btn-link" href={{ path("app_contact") }}>Nous Contacter</a>
+                        <a class="btn btn-link" href="">Politique de confidentialité</a>
                     </div>
                     <div class="col-md-4">
                         <h6 class="section-title text-start text-primary text-uppercase mb-4">Services</h6>
                         <a class="btn btn-link" href="">Food & Restaurant</a>
-                        <a class="btn btn-link" href="">Spa & Fitness</a>
-                        <a class="btn btn-link" href="">Sports & Gaming</a>
-                        <a class="btn btn-link" href="">Event & Party</a>
-                        <a class="btn btn-link" href="">GYM & Yoga</a>
+                        <a class="btn btn-link" href="">WIfi & Spa</a>
+                        <a class="btn btn-link" href="">Événement & Fête</a>
                     </div>
    
                 </div>
 
                 <div class="row mt-3">
                     <div class="copyright col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved. 
-                        Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
-                        <br>Distributed By: <a class="border-bottom" href="https://themewagon.com" target="_blank">ThemeWagon</a>
+                        <p>&copy; 2024 NayirHotel. Tous droits réservés. Conçu par Nayir Galela.
                     </div>
                 
-
-                    <div class="col-md-6 text-center text-md-end">
-                            <div class="footer-menu">
-                                <a href="">Home</a>
-                                <a href="">Cookies</a>
-                                <a href="">Help</a>
-                                <a href="">FQAs</a>
-                            </div>
-                    </div>
+    
                 </div>
             </div>
             
