--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -30,7 +30,7 @@
                     value="{{ csrf_token('authenticate') }}"
                 >
                 <div class="d-grid">
-                    <button type="submit" class="btn btn-success">Se connecter</button>
+                    <button type="submit" class="btn btn-primary">Se connecter</button>
                     <p class="text-center">N'avez vous pas de compte ? <a href={{path('app_register')}}>Inscription</a></p>
                 </div>
             </form>
