--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -26,22 +26,25 @@
                 <div class="input-group mb-3">
                     <span class="input-group-text"><i class="fa fa-envelope"></i></span>
                     {{ form_widget(registrationForm.email,{'attr':{'placeholder':' E-mail'}}) }}
+                    {{ form_errors(registrationForm.email) }} {# Affichage des erreurs pour ce champ #}
                 </div>
 
                     {# Champ "Mot de passe" et "Confirmation du mot de passe" #}
                 <div class="input-group mb-3">
                     <span class="input-group-text"><i class="fa fa-lock"></i></span>
                     {{ form_widget(registrationForm.plainPassword.first, {'attr': {'placeholder': 'Entrer votre mot de passe'}}) }}
+                    {{ form_errors(registrationForm.plainPassword.first) }} {# Affichage des erreurs pour ce champ #}
                 </div>
                 <div class="input-group mb-3">
                     <span class="input-group-text"><i class="fa fa-lock"></i></span>
                     {{ form_widget(registrationForm.plainPassword.second, {'attr': {'placeholder': 'Confirmer votre mot de passe'}}) }}
+                    {{ form_errors(registrationForm.plainPassword.second) }} {# Affichage des erreurs pour ce champ #}                
                 </div>
 
                 
                 
                 <div class="d-grid">
-                    <button type="submit" class="btn btn-success">S'inscrire</button>
+                    <button type="submit" class="btn btn-primary">S'inscrire</button>
                     <p class="text-center text-muted">
                         En cliquant sur s'inscrire, vous acceptez nos <a href="">Conditions générales</a>, notre <a href="">Politique de 
                         de confidantialité</a> et  notre <a href="">Politique d'utilisation</a> des cookies.
