--- a/templates/reservations/reservation.html.twig
+++ b/templates/reservations/reservation.html.twig
@@ -86,10 +86,7 @@
                                 {{ form_widget(form.capaciteEnfant, {'attr': {'class': ' form-control p-2', 'placeholder': 'Enfants'  }}) }}
                             </div>
                             <div class="col-12">
-                                <div class="form-floating">
-                                    <textarea class="form-control" placeholder="Special Request" id="message" style="height: 100px"></textarea>
-                                    <label for="message">Demande speciale</label>
-                                </div>
+                                {{ form_widget(form.demandeSpeciale, {'attr': {'class': ' form-control p-2', 'placeholder': 'Demande spéciale'  }}) }}
                             </div>
                             <div class="col-12">
                                 <button class="btn btn-primary w-100 py-3 rounded" type="submit">Réserver maintenant</button>
