affichage de la note moyenne dans la page des chambres

--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -9,9 +9,9 @@
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+33658645538</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>galela.nayir@gmail.com</p>
                         <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.twitter.com/votrepage" target="_blank"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/votrepage" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.linkedin.com/in/votrepage" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     
@@ -20,7 +20,7 @@
                         <h6 class="section-title text-start text-primary text-uppercase mb-4">Company</h6>
                         <a class="btn btn-link"  href="#a-propos">A Propos</a>
                         <a class="btn btn-link" href={{ path("app_contact") }}>Nous Contacter</a>
-                        <a class="btn btn-link" href="">Politique de confidentialité</a>
+                        <a class="btn btn-link" href={{ path('app_confidentialite') }}>Politique de confidentialité</a>
                     </div>
                     <div class="col-md-4">
                         <h6 class="section-title text-start text-primary text-uppercase mb-4">Services</h6>
