--- a/templates/chambre/index.html.twig
+++ b/templates/chambre/index.html.twig
@@ -77,7 +77,16 @@
                                     <div class="d-flex  mb-3">
                                         <h5 class="mb-0">{{chambre.typeDeChambre.nom}}</h5>
                                         <div class="ps-5">
-                                            <small class="fa fa-star text-primary"></small>
+                                            {% set Note = chambre.noteMoyenne %}
+                                                {% for i in 1..5 %}
+                                                    {% if i <= Note %}
+                                                        <i class="bi bi-star-fill text-primary"></i> {# Étoile pleine #}
+                                                    {% elseif i <= Note + 0.5 %}
+                                                        <i class="bi bi-star-half text-primary"></i> {# Demi-étoile #}
+                                                    {% else %}
+                                                        <i class="bi bi-star text-primary"></i> {# Étoile vide #}
+                                                    {% endif %}
+                                                {% endfor %}
                                         </div>
                                     </div>
                                     <h6><span class="bg-primary text-white rounded py-1 px-3 ">{{ chambre.prix / 100 }} €/Nuit</span></h6>
