--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -32,6 +32,7 @@
                 <div class="d-grid">
                     <button type="submit" class="btn btn-primary">Se connecter</button>
                     <p class="text-center">N'avez vous pas de compte ? <a href={{path('app_register')}}>Inscription</a></p>
+                    <p class="text-center"> <a href={{path('app_forgot_password_request')}}>Mot de passe oublié</a></p>
                 </div>
             </form>
     
